--- a/admin.html
+++ b/admin.html
@@ -321,9 +321,20 @@ border-radius: 3px 3px 0 0; }
 .thumbnail1 li:hover p span{ background:rgb(121,3,3); color:#fff; padding: 1px 20px 4px; border-radius: 20px;}
 .slider{ margin-top:60px; }
 .per{ display: inline-block;  padding: 0 10px}
-.page-number{display: inline-block; padding:7px 10px; background: #ededed; border-radius: 10px; border: 1px solid #ccc;}
+.page-number{display: inline-block; padding:4px 10px; background: #ededed; border-radius: 10px; border: 1px solid #ccc;}
 .next{ display: inline-block; padding:0 10px;}
-.clos-pre{ float: left; background: rgb(121,3,3); padding:5px 10px; border-radius: 10px; display: inline-block; color:#fff; margin-left:10px;}
+.bottom-menu{ position: relative; margin-top:40px;}
+.clos-pre{ background: rgb(121,3,3); padding:5px 10px; border-radius: 10px; color:#fff; margin-left:10px; position: absolute;}
+.pencil{ display: inline-block; position:relative;}
+.pencil ul{padding: 2px 4px; position: absolute; top:-50px; background: #ededed; left:0; border-radius:5px 5px 0 0;}
+.pencil ul li{ list-style-type: none;}
+.pen{ background: #ededed; padding: 5.5px; }
+.pen img { vertical-align: top;}
+.pen-btn{ display: none; }
+.position-change{ display: inline-block; }
+.position-change ul { padding: 0; }
+.position-change ul li{ list-style-type: none; float: left; }
+.position-change ul li img{ padding-top:5px;}
 </style>
 <!-- Presentation Room --> 
 <div class="col-lg-9 col-md-9 col-sm-8">
@@ -350,9 +361,30 @@ border-radius: 3px 3px 0 0; }
     </div>
     <div class="row">
     <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12" style="padding-right:5px;">
-    <div class="slider">
-    <img src="dist/img/slider.jpg" class="img-responsive">
-    </div>
+         <div class="slider">
+         <img src="dist/img/slider.jpg" class="img-responsive">
+         </div>
+         <div class="row">
+             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center bottom-menu">
+                 <div class="clos-pre">Close Presentation</div>
+                 <div class="per">PREVIOUS</div>
+                 <div class="page-number">Page 1 of 10</div>
+                 <div class="next">NEXT</div>
+                 <div class="pencil">
+                    <ul class="pen-btn">
+                       <li><img src="dist/img/era.png" data-toggle="tooltip" data-placement="right" title="Eraser"></span></li>
+                      <li><img src="dist/img/pen.png" data-toggle="tooltip" data-placement="right" title="Pencil"></span></li>
+                    </ul>
+                     <span class="pen"><img src="dist/img/pen.png"></span>
+                 </div>
+                 <div class="position-change">
+                   <ul>
+                   <li><img src="dist/img/tarn-left.png"></li>
+                   <li><img src="dist/img/tarn--right.png"></li>
+                   </ul>
+                 </div>
+             </div>
+           </div>
     </div>
     <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12" style="padding-left:5px;">
     <ul class="thumbnail1">
@@ -366,24 +398,15 @@ border-radius: 3px 3px 0 0; }
      </ul>   
    </div>
    </div>
-   <div class="row">
-   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-   <div class="clos-pre">Close Presentation</div>
-   <div class="per">PREVIOUS</div>
-   <div class="page-number">Page 1 of 10</div>
-   <div class="next">NEXT</div>
-   </div>
-   </div>
+  
    </div>
 </div>
 </div>
 
 <!-- End PResentation Room -->
 
-
-
-
     </section>
+
     <!-- /.content -->
   </div>
 
@@ -754,6 +777,12 @@ $('.slider-nav').slick({
       
 $(".pls").click(function(){
     $(".meet-menu").toggle(200);
+});
+$(document).ready(function(){
+    $('[data-toggle="tooltip"]').tooltip();   
+});
+$(".pen").click(function(){
+    $(".pen-btn").toggle();
 });
 </script>
 
