--- a/admin.html
+++ b/admin.html
@@ -400,10 +400,11 @@ bottom: 20px;
     position: absolute;
     width: 100%; background: #fff; padding-bottom: 10px; padding-top:5px;}
 @media(max-width:767px){.thumbnail1{display: none;} .padd-bom{ padding-right: 15px !important; } .clos-pre{ position: relative; margin-top: -60px }.instant-connect .video-chat{ position: relative; top:1px; } .right-part{margin-left:0px !important;}.bottom-tool{ background: transparent; bottom: 210px } .clos-pre{margin-bottom:5px;}.tool{left: 62px; position: absolute; top: 12px;}}
-@media(min-width:1920px){.thumbnail1{height: 750px;} .thumbnail1 li img{ width:160px;}.direct-chat-messages{padding: 20px 10px;
-height: 480px;}.padd-bom{ padding-bottom: 53px; }}
+@media(min-width:1920px){.thumbnail1{height: 750px;}.direct-chat-messages{padding: 20px 10px;
+height: 480px;}.padd-bom{ padding-bottom: 53px; } .right-part{ margin-left: 26% !important;}.bottom-tool{bottom:-15px;}}
 .pls{ position: relative; }
-.right-part{margin-left:340px; background: #fff;}
+.right-part{margin-left:340px; /*background: #fff;*/}
+
 select:focus{ outline: none; };
 </style>
 <!-- Presentation Room --> 
