--- a/admin.html
+++ b/admin.html
@@ -244,9 +244,16 @@ Instant Connect UI
 .instant-connect .video-chat .chat-container .direct-chat-messages{height:250px;}
 .instant-connect .video-chat .client-videos-container .video-container .video{ height: 120px }}
 .meeting-msg{ position: relative; }
-.meeting-msg h5{ color: #444; background: #ECF0F5; margin-top: 0; border-bottom: 1px solid #ccc; padding:20px 0; font-style: 16px}
-.meeting-msg .fa-comments{ font-size: 20px; font-weight: bold; color:rgb(121,3,3); padding-right: 10px; padding-left: 5px }
-.close-icon{ position: absolute;  top:27px; right: 16px;}
+.meeting-msg h5{     color: #444;
+    background: #ECF0F5;
+    margin-top: 0;
+    border-bottom: 1px solid #ccc;
+    /* padding: 18px 0; */
+    height: 6.1rem;
+    line-height: 6.1rem;
+    font-size: 22px;}
+.meeting-msg .fa-comments{ font-size: 24px; font-weight: bold; color: rgb(121,3,3); padding-right: 10px; padding-left: 10px;}
+.close-icon{     position: absolute; top: 20px; right: 16px; font-size: 24px;}
 .close-icon .fa-times{ color: #444; }
 .messages{ text-align:right; width: 85%; position: relative; float: left;}
 .ct-user-icon{ position: absolute; bottom: 27px; right: -30px; }
@@ -285,7 +292,7 @@ p:last-of-type .msg-bar.msg-last1 {
     border-bottom-right-radius: 20px;
 }
 .chat-mathed{ position:relative; }
-.messages1{ text-align:left; width: 85%; position: relative; float: right;}
+.messages1{ text-align:left; width: 85%; position: relative; float: right; color:#333;}
 .ct-user-icon1{ position: absolute; bottom: 0px; left: -33px; }
 .ct-user-icon1 img{ width:35px; height: 35px; border-radius: 50%; }
 .messages1 .chat-persion{font-size:10px; color:#888; font-weight:600; margin-top:10px; margin-left:20px; display: inline-block;}
@@ -310,6 +317,7 @@ p:last-of-type .msg-bar-resive.msg-last-resive {
 .form-control1 textarea{border:none; font-size: 1.4rem; padding:10px 32px 4px; height:60px; margin-top:7px; resize:none; width:235px; background: transparent none repeat scroll 0 0; }
 .go{ background:none; border:none; width:50px;padding:8px 0; position:absolute; right:0; bottom:17px; color:#790303; font-size:16px;}
 .go1{ background:none; border:none; width:20px;padding:8px 0; position:absolute; left:7px; bottom:10px; color:#ccc; font-size:16px;}
+
 
 </style>
 
