--- a/admin.html
+++ b/admin.html
@@ -809,6 +809,7 @@ Instant Connect UI
 </div>
 <!-- End Youtube Modal  -->
 
+<!-- End User Meeting -->
 <div id="kickUserModal" class="ICModalWindow modal fade" role="dialog">
   <div class="modal-dialog">
 
@@ -816,21 +817,21 @@ Instant Connect UI
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title"><i class="fa fa-times" aria-hidden="true"></i> End User Meeting</h4>
+        <h4 class="modal-title"><i class="fa fa-times" aria-hidden="true"></i> End Meeting</h4>
       </div>
       <div class="modal-body">
               <div class="row">
         <div class="col-xs-12">
           <div class="box">
             <div class="box-header">
-              <h3 class="box-title">What page would you like your user to goto?</h3>
+              <h3 class="box-title">Redirect users to what page?</h3>
 
              
             </div>
             <!-- /.box-header -->
             <div class="box-body table-responsive no-padding">
                  <div class="form-group">
-                <label>Select A Page for User Redirect</label>
+                <label>Please Select</label>
                 <select class="form-control select2" style="width: 100%;">
                   <option selected="selected">Alabama</option>
                   <option>Alaska</option>
@@ -873,7 +874,7 @@ Instant Connect UI
 
   </div>
 </div>
-<!-- End Youtube Modal  -->
+<!-- End Meeting Modal  -->
 
 <!-- REQUIRED JS SCRIPTS -->
 
